@@ -119,6 +119,7 @@
 
 0.15.10 release
 
+	* fixed crash when loading resume file with more files than the torrent in it
 	* fix invalid-parameter error on windows when disabling filesystem disk cache
 	* fix connection queue issue causing shutdown delays
 	* fixed mingw build
